# apijson-rust

./: .env  Cargo.toml  README.md  application.yaml  docker-compose.yaml
.docker/mysql/init/: 01-init.sql  02-init.sql
.docker/postgres/init/: 01-init.sql  03-init.sql
src/: main.rs
src/app/: mod.rs  server.rs  startup.rs
src/app/common/: id.rs  mod.rs  rpc.rs
src/app/datasource/: config.rs  dialect.rs  loader.rs  manager.rs  metadata.rs  mod.rs  mysql.rs  postgres.rs
src/app/handler/: datasource.rs  delete.rs  get.rs  head.rs  mod.rs  post.rs  put.rs
src/app/handler/ctx/: dialect.rs  mod.rs  query_context.rs  query_executor.rs
src/app/handler/util/: mod.rs  parser.rs  string_util.rs  transform.rs
