[package]
name = "panda-base"
version = "1.0.0"
edition = "2024"

[dependencies]
# 日志相关
log = { version = "0.4" }
tklog = { version = "0.3" }
lazy_static = { version = "1.5" }

# 数据结构 hashmap
fnv = { version = "1.0" }
# 日期
chrono = { version = "0.4", features = ["serde"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9.33" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["mysql", "postgres", "chrono", "rust_decimal", "uuid", "runtime-tokio"] }
base64 = { version = "0.22.1" }
uuid = { version = "1.0", features = ["v4", "serde"] }
rustflake = "0.1.1"


