[package]
name = "panda-base"
version = "1.0.0"
edition = "2024"

[dependencies]
# 日志相关
log = { version = "0.4" }
tklog = { version = "0.3.0" }
lazy_static = { version = "1.5" }

# 环境变量与占位符
regex = { version = "1" }
dotenvy = { version = "0.15" }

# 数据结构 hashmap
fnv = { version = "1.0" }

# 日期和ID生成
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rustflake = { version = "0.1.1" }

# 编码/解码
base64 = { version = "0.22.1" }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"]}
serde_yaml = { version = "0.9.33" }

# 数据库
sqlx = { version = "0.8", features = ["mysql", "postgres", "chrono", "rust_decimal", "uuid", "runtime-tokio"] }

# Web服务器
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
indexmap = { version = "2.11.0", features = ["serde"] }

